--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/15ba595f14.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <svg height="400" width="400">
-        <circle 
-        r='190' 
-        cx='200' 
-        cy='200' 
-        fill='yellow' 
-        stroke='tomato' 
-        stroke-width='15' 
-        transform='rotate(-90 200 200)'></circle>
-    </svg>
-
-    <input type="text" id="duration" value="3">
-    <button id="start"><i class="fas fa-play"></i></button>
-    <button id="pause"><i class="fas fa-pause"></i></button>
+    <div class="timer">
+        <div class="controls">
+          <input id="duration" value="3" />
+          <div>
+            <button id="start"><i class="fas fa-play"></i></button>
+            <button id="pause"><i class="fas fa-pause"></i></button>
+          </div>
+        </div>
+        <svg class="dial">
+          <circle
+            fill="thistle"
+            stroke="rebeccapurple"
+            stroke-width="15"
+            r="190"
+            cx="0"
+            cy="200"
+            transform="rotate(-90 100 100)"
+          />
+        </svg>
+      </div>
+  
 <script src="timer.js"></script>    
 <script src="index.js"></script>    
 </body>
